# ideaton-trend

.claude/: settings.local.json
travel-trend/: .env.example  README.md  context.md  pyproject.toml  requirements.txt
travel-trend/config/: settings.py  urls.py
travel-trend/trends/: serializers.py  urls.py  views.py
travel-trend/trends/services/: gemini_service.py  trends_service.py
